GPII-364: Corrected a layout bug in "Add contrast" adjuster group.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -947,7 +947,7 @@ input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon:before {
 	border: 2px solid #000000 !important;
 	border-radius: 0 !important;
 	margin-right: 20px !important;
-	padding: 0px !important;
+	padding: 5px !important;
 	height: 2em !important;
 	width: 2em !important;
 	cursor: pointer;
